<resources>
    <string name="app_name">RoomDatabaseView</string>
    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="hint_employee_firstname">First Name</string>

    <string name="hint_employee_title">Title</string>

    <string name="hint_employee_department">Department</string>

    <string name="hint_employee_city">City</string>

    <string name="hint_employee_phone">Phone Number</string>

    <string name="hint_employee_email">Email</string>

    <string name="hint_employee_lastname">Last Name</string>
    <string name="employee_name">Employee Name</string>

    <string name="category_gender">Gender</string>

    <string name="category_title">Employee Title</string>

    <string name="category_department">Employee Department</string>

    <string name="category_city">Employee City</string>

    <string name="category_phone">Employee Phone</string>

    <string name="category_email">Employee Email</string>
</resources>
